--- a/FittrIOS/Fittr-Info.plist
+++ b/FittrIOS/Fittr-Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Helvetica LT 55 Roman.ttf</string>
 		<string>lobster.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
